alignement fix for mobile

--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -444,7 +444,7 @@ main .section.dealer-locator-container > div {
   display: block;
   font-weight: 700;
   margin: 10px 0 0;
-  max-width: 70%;
+  max-width: 230px;
 }
 
 .dealer-locator .nearby-pins article.teaser .teaser-top .heading div.distance {
@@ -475,6 +475,7 @@ main .section.dealer-locator-container > div {
   color: #000;
   font-weight: 700;
   margin-top: 10px;
+  max-width: 320px;
 }
 
 .dealer-locator .nearby-pins article.teaser .teaser-bottom {
@@ -574,6 +575,14 @@ main .section.dealer-locator-container > div {
 
   .dealer-locator .nearby-pins article.teaser .marker-main {
     min-width: 10%;
+  }
+
+  .dealer-locator .nearby-pins article.teaser .teaser-top .heading p {
+    max-width: unset;
+  }
+
+  .dealer-locator .nearby-pins article.teaser .teaser-top .left {
+    max-width: unset;
   }
 }
 
